Update opening hours

--- a/index/index.html
+++ b/index/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-12 section">
             <h1 class="section-heading">Opening Hours</h1>
             <p class="lead section-lead">Here are our opening hours when you can come in and place an order.</p>
-            <p class="section-paragraph">Monday 8am to 7pm<br>Tuesday Monday 8am to 7pm<br>Wednesday Monday 8am to 7pm<br>Thursday Monday 8am to 7pm<br>Friday Monday 8am to 7pm<br>Saturday Monday 8am to 7pm<br>Sunday Closed<br></p>
+            <p class="section-paragraph">Monday 8am to 7pm<br>Tuesday Monday 8am to 7pm<br>Wednesday Monday 8am to 7pm<br>Thursday Monday 8am to 7pm<br>Friday Monday 8am to 7pm<br>Saturday Monday 8am to 7pm<br>Sunday 1pm to 5pm<br></p>
           </div>
       </div>
     </div>
