--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="col-lg-12 section">
             <h1 class="section-heading">Opening Hours</h1>
             <p class="lead section-lead">Here are our opening hours when you can come in and place an order.</p>
-            <p class="section-paragraph">Monday 8.30am to 7pm<br>Tuesday 8.30am to 7pm<br>Wednesday 8.30am to 7pm<br>Thursday 8.30am to 7pm<br>Friday 8.30am to 7pm<br>Saturday 8.30am to 7pm<br>Sunday Closed<br></p>
+            <p class="section-paragraph">Monday 8.30am to 7pm<br>Tuesday 8.30am to 7pm<br>Wednesday 8.30am to 7pm<br>Thursday 8.30am to 7pm<br>Friday 8.30am to 7pm<br>Saturday 8.30am to 7pm<br>Sunday 1pm to 5pm<br></p>
           </div>
       </div>
     </div>
